# COP3530_Project_2

./: CMakeLists.txt  README.md  client.py  config.py  filters.py  main.py  pipeline.py  writer.py
src/: KDTree.cpp  KDTree.h  Point.h  QuadTree.cpp  QuadTree.h  kd_tree.h  kdtree.cpp  kdtree.h  main.cpp
